--- a/FairWorks.WebUI/Views/_ViewImports.cshtml
+++ b/FairWorks.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using FairWorks.WebUI
 @using FairWorks.WebUI.Models
+@using FairWorks.Domain.Entities
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
