Kullanici dto,giris,ındex yazildi

--- a/FairWorks.WebUI/Views/_ViewImports.cshtml
+++ b/FairWorks.WebUI/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using FairWorks.WebUI
 @using FairWorks.WebUI.Models
 @using FairWorks.Domain.Entities
+@using FairWorks.WebUI.Models.Dto
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
