--- a/FairWorks.WebUI/wwwroot/css/site.css
+++ b/FairWorks.WebUI/wwwroot/css/site.css
@@ -69,6 +69,7 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+/*Login Ekrani*/
 a {
     text-decoration: none !important;
 }
@@ -146,8 +147,6 @@ form .error {
 }
 
 /*YETKİ HATASI*/
-
-
 h1 {
     color: red;
 }
