--- a/FairWorks.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,7 +1,7 @@
 ﻿@using FairWorks.WebUI
 @using FairWorks.WebUI.Models
 @using FairWorks.Domain.Entities
-@using FairWorks.WebUI.Models.Dto
-
+@using FairWorks.WebUI.Areas.Admin.Models.Dto
+@using FairWorks.BLManager.Abstract
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
