--- a/FairWorks.WebUI/Views/Shared/_Layout.cshtml
+++ b/FairWorks.WebUI/Views/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Hakkımızda</a>
-                        </li>                       
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Doviz" asp-action="Index">Döviz Kurları</a>
+                        </li>     
                     </ul>
                     
                             <a class="btn btn-success" asp-area="" asp-controller="Kullanici" asp-action="Giris">Giris</a>
