--- a/FairWorks.WebUI/Areas/Admin/Views/DavetiyesizZiyaretci/Create.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/DavetiyesizZiyaretci/Create.cshtml
@@ -1,6 +1,6 @@
-﻿@model BiletliZiyaretci
+﻿@model DavetiyesizZiyaretci
 
-<form method="post" asp-controller="BiletliZiyaretci" asp-action="Create">
+<form method="post" asp-controller="DavetiyesizZiyaretci" asp-action="Create">
 
     <div class="form-group row">
         <label asp-for="Ad" class="col-md-4 col-form-label"></label>        
@@ -18,12 +18,6 @@
         <label asp-for="FirmaAdı" class="col-md-4 col-form-label"></label>        
         <div class="col-md-8">
             <input type="text" asp-for="FirmaAdı" class="form-control"/>
-        </div>       
-    </div>
-    <div class="form-group row">
-        <label asp-for="Adres" class="col-md-4 col-form-label"></label>        
-        <div class="col-md-8">
-            <input type="text" asp-for="Adres" class="form-control"/>
         </div>       
     </div>
     <div class="form-group row">
@@ -54,6 +48,7 @@
         <button type="submit" class="btn btn-primary">Kaydet</button>
     </div>
     <div class="form-group row">
-        <a class="btn btn-secondary" asp-action="Index" asp-controller="BiletliZiyaretci">Geri Dön</a>
+        <a class="btn btn-secondary" asp-action="Index" asp-controller="DavetiyesizZiyaretci">Geri Dön</a>
     </div>
+
 </form>
