AutoMapper eklendi ModelDtolar eklendir mapper profil ve UcretsizVerilenAlanModel eklendi

--- a/FairWorks.WebUI/Areas/Admin/Views/BiletliZiyaretci/Create.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/BiletliZiyaretci/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BiletliZiyaretci
+﻿@model BiletliZiyaretciDto
 
 <form method="post" asp-controller="BiletliZiyaretci" asp-action="Create">
 
