--- a/FairWorks.WebUI/Areas/Admin/Views/DavetiyesizZiyaretci/Create.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/DavetiyesizZiyaretci/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model DavetiyesizZiyaretci
+﻿@model DavetiyesizZiyaretciDto
 
 <form method="post" asp-controller="DavetiyesizZiyaretci" asp-action="Create">
 
