--- a/FairWorks.WebUI/Areas/Admin/Views/FirmaBilgi/Create.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/FirmaBilgi/Create.cshtml
@@ -1,36 +1,41 @@
-﻿@model FirmaBilgiDto
+﻿@model FirmaBilgiCreateDto
 
 <form method="post" asp-controller="FirmaBilgi" asp-action="Create">
 
     <div class="form-group row">
-        <label asp-for="Adres" class="col-md-4 col-form-label"></label>        
+        <label asp-for="@Model.FirmaBilgiDto.Adres" class="col-md-4 col-form-label"></label>        
         <div class="col-md-8">
-            <input type="text" asp-for="Adres" class="form-control"/>
+            <input type="text" asp-for="@Model.FirmaBilgiDto.Adres" class="form-control"/>
         </div>       
     </div>
     <div class="form-group row">
-        <label asp-for="Telefon" class="col-md-4 col-form-label"></label>        
+        <label asp-for="@Model.FirmaBilgiDto.Telefon" class="col-md-4 col-form-label"></label>        
         <div class="col-md-8">
-            <input type="text" asp-for="Telefon" class="form-control"/>
+            <input type="text" asp-for="@Model.FirmaBilgiDto.Telefon" class="form-control"/>
         </div>       
     </div>
     <div class="form-group row">
-        <label asp-for="VergiDairesi" class="col-md-4 col-form-label"></label>        
+        <label asp-for="@Model.FirmaBilgiDto.VergiDairesi" class="col-md-4 col-form-label"></label>        
         <div class="col-md-8">
-            <input type="text" asp-for="VergiDairesi" class="form-control"/>
+            <input type="text" asp-for="@Model.FirmaBilgiDto.VergiDairesi" class="form-control"/>
         </div>       
     </div>
     <div class="form-group row">
-        <label asp-for="VergiNumarası" class="col-md-4 col-form-label"></label>        
+        <label asp-for="@Model.FirmaBilgiDto.VergiNumarası" class="col-md-4 col-form-label"></label>        
         <div class="col-md-8">
-            <input type="text" asp-for="VergiNumarası" class="form-control"/>
+            <input type="text" asp-for="@Model.FirmaBilgiDto.VergiNumarası" class="form-control"/>
         </div>       
     </div>
     <div class="form-group row">
-        <label asp-for="FuarYetkilisi" class="col-md-4 col-form-label"></label>        
+        <label asp-for="@Model.FirmaBilgiDto.FuarYetkilisi" class="col-md-4 col-form-label"></label>        
         <div class="col-md-8">
-            <input type="text" asp-for="FuarYetkilisi" class="form-control"/>
-        </div>       
+            <input type="text" asp-for="@Model.FirmaBilgiDto.FuarYetkilisi" class="form-control"/>
+        </div> 
+     </div>
+     <select id="ddlAlan" name="UcretsizVerilenAlanId" asp-items="Model.UcretsizVerilenAlan" class="col-md-12 col-form-label">
+                <option value="0" >Ucretsiz Verilen Alan Seciniz</option>
+            </select>
+
     <div class="form-group row">
         <button type="submit" class="btn btn-primary">Kaydet</button>
     </div>
