--- a/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -67,9 +67,9 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="./index3.html" class="nav-link active">
+                        <a asp-action="Index" asp-controller="UcretsizVerilenAlan" class="nav-link active">
                             <i class="far fa-circle nav-icon"></i>
-                            <p>Yoklama</p>
+                            <p>Ucretsiz Verilen Alan</p>
                         </a>
                     </li>
                 </ul>
