--- a/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -72,6 +72,12 @@
                             <p>Ucretsiz Verilen Alan</p>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="FirmaTipi" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Firma Tipleri</p>
+                        </a>
+                    </li>
                 </ul>
 
             </li>
