--- a/FairWorks.WebUI/Areas/Admin/Views/UcretsizVerilenAlan/Create.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/UcretsizVerilenAlan/Create.cshtml
@@ -3,8 +3,8 @@
 <form method="post" asp-controller="UcretsizVerilenAlan" asp-action="Create">
 
     <div class="form-group row">
-        <label asp-for="UcretsizVerilenm2" class="col-md-4 col-form-label"></label>        
-        <div class="col-md-8">
+        <label asp-for="UcretsizVerilenm2" class="col-md-6 col-form-label"></label>        
+        <div class="col-md-6">
             <input type="text" asp-for="UcretsizVerilenm2" class="form-control"/>
         </div>       
     </div>
@@ -12,7 +12,7 @@
         <button type="submit" class="btn btn-primary">Kaydet</button>
     </div>
     <div class="form-group row">
-        <a class="btn btn-secondary" asp-action="Index" asp-controller="Firma">Geri Dön</a>
+        <a class="btn btn-secondary" asp-action="Index" asp-controller="UcretsizVerilenAlan">Geri Dön</a>
     </div>
 
 </form>
