--- a/FairWorks.WebUI/Areas/Admin/Views/BiletliZiyaretci/Delete.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/BiletliZiyaretci/Delete.cshtml
@@ -1,44 +1,34 @@
 ﻿@model BiletliZiyaretci
 
 <form method="post" asp-controller="BiletliZiyaretci" asp-action="Delete">
-
+   
     <div class="form-group row">
-        <label asp-for="Ad" class="col-md-4 col-form-label">@Model.Ad</label>        
-        
+        <label asp-for="Ad" class="col-md-2 col-form-label">@Model.Ad</label>        
     </div>
     <div class="form-group row">
-        <label asp-for="SoyAd" class="col-md-4 col-form-label">@Model.SoyAd</label>        
-        
+        <label asp-for="SoyAd" class="col-md-2 col-form-label">@Model.SoyAd</label>        
     </div>
     <div class="form-group row">
-        <label asp-for="FirmaAdı" class="col-md-4 col-form-label">@Model.FirmaAdı</label>        
-        
-    </div>       
-    
-    <div class="form-group row">
-        <label asp-for="Adres" class="col-md-4 col-form-label">@Model.Adres</label>        
-           
+        <label asp-for="FirmaAdı" class="col-md-2 col-form-label">@Model.FirmaAdı</label>        
     </div>
     <div class="form-group row">
-        <label asp-for="Telefon" class="col-md-4 col-form-label">@Model.Telefon</label>        
-             
+        <label asp-for="Adres" class="col-md-2 col-form-label">@Model.Adres</label>        
     </div>
     <div class="form-group row">
-        <label asp-for="Eposta" class="col-md-4 col-form-label">@Model.Eposta</label>        
-        
+        <label asp-for="Telefon" class="col-md-2 col-form-label">@Model.Telefon</label>        
     </div>
     <div class="form-group row">
-        <label asp-for="Faks" class="col-md-4 col-form-label">@Model.Faks</label>        
-       
+        <label asp-for="Eposta" class="col-md-2 col-form-label">@Model.Eposta</label>        
     </div>
     <div class="form-group row">
-        <label asp-for="Meslek" class="col-md-4 col-form-label">@Model.Meslek</label>        
-        
+        <label asp-for="Faks" class="col-md-2 col-form-label">@Model.Faks</label>        
     </div>
-     <p>Bu Kaydi Silmek Istediginizden Eminmisinz?</p>
+    <div class="form-group row">
+        <label asp-for="Meslek" class="col-md-2 col-form-label">@Model.Meslek</label>        
+    </div>    
+    <p>Bu kaydi Silmek istediginizden eminmisiniz ?</p>
     <div class="form-group row">
         <button type="submit" class="btn btn-primary">Sil</button>
-        <a class="btn btn-secondary" asp-action="Index" asp-controller="BiletliZiyaretci">Listeye Geri Dön</a>
+        <a  class="btn btn-secondary" asp-action="Index" asp-controller="BiletliZiyaretci">Listeye Geri Dön</a>
     </div>
-
 </form>
