--- a/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -78,6 +78,30 @@
                             <p>Firma Tipleri</p>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="TemsilEttigiFirma" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Temsil Ettigi Firma</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="FirmaTipveTemsilEdilenFirma" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Firma Tipi ve Temsil Ettigi Firma</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="GorusulenFirma" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Gorusulen Firma</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="IlaveStandMalzemeler" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Ilave Stand Malzemeleri</p>
+                        </a>
+                    </li>
                 </ul>
 
             </li>
