--- a/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -102,6 +102,12 @@
                             <p>Ilave Stand Malzemeleri</p>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="KatalogGirisForms" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Katalog Giris Form</p>
+                        </a>
+                    </li>
                 </ul>
 
             </li>
