KatalogGirisForm ve OdemePlani controller yazildi

--- a/FairWorks.WebUI/Areas/Admin/Views/KatalogGirisForms/Delete.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/KatalogGirisForms/Delete.cshtml
@@ -4,7 +4,7 @@
 
 
 <table class="table table-bordered">
-<div>
+  <div>
     <h4>KatalogGirisForm</h4>
     <hr />
     <dl class="row">
@@ -61,7 +61,7 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Listeye Dön</a>
     </form>
 </div>
 </table>
