--- a/FairWorks.WebUI/Areas/Admin/Views/KatalogGirisForms/Create.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/KatalogGirisForms/Create.cshtml
@@ -46,7 +46,7 @@
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
             <div>
-                 <a asp-action="Index">Back to List</a>
+                 <a asp-action="Index">Listeye Dön</a>
             </div>
         </form>
     </div>
