--- a/FairWorks.WebUI/Areas/Admin/Views/KatalogGirisForms/Details.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/KatalogGirisForms/Details.cshtml
@@ -58,6 +58,6 @@
 </table>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Listeye Dön</a>
 </div>
 
