--- a/FairWorks.WebUI/Areas/Admin/Views/KatalogGirisForms/Edit.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/KatalogGirisForms/Edit.cshtml
@@ -50,7 +50,7 @@
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
             <div>
-                  <a asp-action="Index">Back to List</a>
+                  <a asp-action="Index">Listeye Dön</a>
             </div>
 
         </form>
