--- a/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -85,7 +85,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a asp-action="Index" asp-controller="FirmaTipveTemsilEdilenFirma" class="nav-link active">
+                        <a asp-action="Index" asp-controller="FirmaTipveTemsilEdilenFirmas" class="nav-link active">
                             <i class="far fa-circle nav-icon"></i>
                             <p>Firma Tipi ve Temsil Ettigi Firma</p>
                         </a>
@@ -106,6 +106,12 @@
                         <a asp-action="Index" asp-controller="KatalogGirisForms" class="nav-link active">
                             <i class="far fa-circle nav-icon"></i>
                             <p>Katalog Giris Form</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="OdemePlani" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Odeme Plani</p>
                         </a>
                     </li>
                 </ul>
