--- a/FairWorks.WebUI/Areas/Admin/Views/OdemePlani/Index.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/OdemePlani/Index.cshtml
@@ -31,7 +31,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.indirimOrani)
             </th>
-            <th></th>
+            <th>Islem</th>
         </tr>
     </thead>
     <tbody>
