--- a/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -114,6 +114,12 @@
                             <p>Odeme Plani</p>
                         </a>
                     </li>
+                     <li class="nav-item">
+                        <a asp-action="Index" asp-controller="Personel" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Personeller</p>
+                        </a>
+                    </li>
                 </ul>
 
             </li>
