--- a/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -120,6 +120,18 @@
                             <p>Personeller</p>
                         </a>
                     </li>
+                     <li class="nav-item">
+                        <a asp-action="Index" asp-controller="PotansiyelFirma" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Potansiyel Firmalar</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="Salon" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Salonlar</p>
+                        </a>
+                    </li>
                 </ul>
 
             </li>
