DovizsController ve TeklifBilgisiController yazıldı

--- a/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -55,6 +55,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a asp-action="Index" asp-controller="Dovizs" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Doviz</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a asp-action="Index" asp-controller="Firma" class="nav-link active">
                             <i class="far fa-circle nav-icon"></i>
                             <p>Firmalar</p>
@@ -154,6 +160,12 @@
                         <a asp-action="Index" asp-controller="Tedarikci" class="nav-link active">
                             <i class="far fa-circle nav-icon"></i>
                             <p>Tedarikciler</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="TeklifBilgisi" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Teklif Bilgileri</p>
                         </a>
                     </li>
                 </ul>
