--- a/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -168,6 +168,12 @@
                             <p>Teklif Bilgileri</p>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="Urun" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Urunler</p>
+                        </a>
+                    </li>
                 </ul>
 
             </li>
