--- a/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -174,6 +174,12 @@
                             <p>Urunler</p>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="Ziyaretci" class="nav-link active">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Ziyaretciler</p>
+                        </a>
+                    </li>
                 </ul>
 
             </li>
