--- a/FairWorks.WebUI/Views/Home/Privacy.cshtml
+++ b/FairWorks.WebUI/Views/Home/Privacy.cshtml
@@ -3,4 +3,9 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>FairWorks FUARCILIK A.Ş.
+İstanbul Fuar Merkezi, 2020 yılı itibari ile FairWorks Fuarcılık A.Ş. tarafından işletilmeye başlamıştır. FairWorks Fuarcılık A.Ş Türkiye Odalar ve Borsalar Birliği tarafından onaylanmış olan Yurt İçinde Fuar Düzenleme Yetki Belgesi sahibidir.
+
+Geniş otopark alanına sahip, metro hattının içinden geçtiği, çevre yollarına yakın, çevre düzenlemesi ve alt yapısı ile cazip İstanbul Fuar Merkezi her yıl ortalama 100 fuara ev sahipliği yapmaktadır.
+
+FairWorks’da düzenlenen, kendi sektörlerinde dünyanın en büyük fuarları arasında sayılan ve her yıl yurt içi ve yurt dışından yüz binlerce ziyaretçi çeken Motobike İstanbul, Uluslararası Avrasya Demiryolu Fuarı, ICCI Enerji ve Çevre Fuarı, ALUEXPO Alüminyum Teknolojileri Fuarı, Logitrans Lojistik Fuarı, SILMOİSTANBUL Optik Fuarı, TURKCHEM Kimya Sanayi Fuarı gibi uluslararası fuarlar vasıtasıyla binlerce firma yeni pazar ve fırsatlarla buluşmaktadır..</p>
