--- a/FairWorks.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -25,16 +25,28 @@
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
-            <a href="index3.html" class="brand-link">
+           @* <a href="index3.html" class="brand-link">
                 <img src="~/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
                 <span class="brand-text font-weight-light">AdminLTE 3</span>
-            </a>
-
+            </a>*@
+                   <div class="rt-subs">
+                        @if (string.IsNullOrEmpty(User.Identity.Name))
+                        {
+                            <a class="btn btn-success" asp-controller="Kullanici" asp-action="Giris" title=""> Giriş Yap</a>
+                        }
+                        else
+                        {
+                            
+                            <a class="btn btn-success" asp-controller="Kullanici" asp-action="Logout" title=""> Çıkış Yap</a>
+                        }
+                    </div>
             <!-- Sidebar -->
             <partial name="_SideBar" />
             <!-- /.sidebar -->
         </aside>
-
+       
+                                  
+                             
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
             <!-- Content Header (Page header) -->
