--- a/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -53,6 +53,12 @@
                             <i class="far fa-circle nav-icon"></i>
                             <p>Kurlar</p>
                         </a>
+                        <li class="nav-item">
+                        <a class="nav-link active"  asp-controller="Kullanici" asp-action="Index">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Kullanicilar</p>
+                        </a>
+                    </li>
                     </li>
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="Dovizs" class="nav-link active">
