--- a/FairWorks.WebUI/Views/Shared/_Layout.cshtml
+++ b/FairWorks.WebUI/Views/Shared/_Layout.cshtml
@@ -29,13 +29,28 @@
                         </li>     
                     </ul>
                     
-                            <a class="btn btn-success" asp-area="" asp-controller="Kullanici" asp-action="Giris">Giris</a> |  
+                            @*<a class="btn btn-success" asp-area="" asp-controller="Kullanici" asp-action="Giris">Giris</a> | *@ 
                             
                             <a class="btn btn-primary" asp-area="" asp-controller="Kullanici" asp-action="Register">Kayit Ol</a>
-                        
+                             <div class="rt-subs">
+                        @if (string.IsNullOrEmpty(User.Identity.Name))
+                        {
+                            <a class="btn btn-success" asp-controller="Kullanici" asp-action="Giris" title=""> Giriş Yap</a>
+                        }
+                        else
+                        {
+                            
+                            <a class="btn btn-success" asp-controller="Kullanici" asp-action="Logout" title=""> Çıkış Yap</a>
+                        }
+                    </div>
+                      @* if (user.Role == "Admin")
+                            return RedirectToAction("Index", "Home", new { area = "Admin" });
+                      else
+                            return RedirectToAction("Index", "Home");*@
+                                                      
                 </div>
             </div>
-        </nav>
+        </nav>            
     </header>
     <div class="container">
         <main role="main" class="pb-3">
