--- a/FairWorks.WebUI/Views/Kullanici/Register.cshtml
+++ b/FairWorks.WebUI/Views/Kullanici/Register.cshtml
@@ -1,6 +1,6 @@
-﻿@model LoginDto
+﻿@model RegisterDto
 
-
+<div class="login-register-form">
 <div class="row">
     <div class="col-md-5 mx-auto">
 		<div id="first">
