KatalogGirisFormController Düzenlendi ve Kayıt Ol yazisi girişten sonra gözükmesi düzeltildi

--- a/FairWorks.WebUI/Areas/Admin/Views/KatalogGirisForms/Details.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/KatalogGirisForms/Details.cshtml
@@ -39,19 +39,19 @@
             @Html.DisplayNameFor(model => model.UrunGrupları)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UrunGrupları.Id)
+            @Html.DisplayFor(model => model.UrunGrupları.UrunAdi)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirmaTip)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirmaTip.FirmaTipId)
+            @Html.DisplayFor(model => model.FirmaTip.FirmaTip)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TemsilEttigiFirma)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TemsilEttigiFirma.TemsilEttigiFirmaId)
+            @Html.DisplayFor(model => model.TemsilEttigiFirma.TemsilEdilenFirma)
         </dd>
     </dl>
   </div>
