GorusulenFirma Index Düzeltildi

--- a/FairWorks.WebUI/Areas/Admin/Views/FirmaTipveTemsilEdilenFirmas/Index.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/FirmaTipveTemsilEdilenFirmas/Index.cshtml
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.FirmaTipi.FirmaTip)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.TemsilEttigiFirma.TemsilEttigiFirmaId @item.FirmaTipi.FirmaTipId"class="btn btn-primary">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.TemsilEttigiFirma.TemsilEttigiFirmaId @item.FirmaTipi.FirmaTipId"class="btn btn-primary">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.TemsilEttigiFirma.TemsilEttigiFirmaId @item.FirmaTipi.FirmaTipId"class="btn btn-danger">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.TemsilEttigiFirmaId @item.FirmaTipId"class="btn btn-primary">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.TemsilEttigiFirmaId @item.FirmaTipId"class="btn btn-primary">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.TemsilEttigiFirmaId @item.FirmaTipId"class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
