--- a/FairWorks.WebUI/Areas/Admin/Views/TeklifBilgisi/Details.cshtml
+++ b/FairWorks.WebUI/Areas/Admin/Views/TeklifBilgisi/Details.cshtml
@@ -24,13 +24,13 @@
             @Html.DisplayNameFor(model => model.Stand)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Stand.Id)
+            @Html.DisplayFor(model => model.Stand.StandKodu)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Doviz)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Doviz.Id)
+            @Html.DisplayFor(model => model.Doviz.DovizCinsi)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.OdemePlani)
@@ -48,7 +48,7 @@
             @Html.DisplayNameFor(model => model.Salon)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Salon.Id)
+            @Html.DisplayFor(model => model.Salon.SalonNo)
         </dd>
     </dl>
 </table>
